tests/codegen/fail/interface/trait/fields_duplicate.stderr
error: GraphQL interface must have a different name for each field
       · note: https://spec.graphql.org/October2021#sec-Interfaces

 --> fail/interface/trait/fields_duplicate.rs:4:1
  |
4 | trait Character {
  | ^^^^^

error: cannot find attribute `graphql` in this scope
 --> fail/interface/trait/fields_duplicate.rs:7:7
  |
7 |     #[graphql(name = "id")]
  |       ^^^^^^^
  |
  = note: `graphql` is an attribute that can be used by the derive macros `GraphQLEnum`, `GraphQLInputObject`, `GraphQLInterface`, `GraphQLObject`, `GraphQLScalar` and `GraphQLUnion`, you might be missing a `derive` attribute
